# AdventOfCode2022

./: make_day.sh  pyproject.toml
.scripts/: make_day.py  template.py
aoc_common/: benchmark.py  io.py
day01/: day01.py
day02/: day02.py
day03/: day03.py
day04/: day04.py
day05/: day05.py
day06/: day06.py
day07/: day07.py
day08/: day08.py
day09/: day09.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py
day14/: day14.py
day15/: day15.py
day16/: day16.py
day17/: day17.py
day18/: day18.py
day19/: day19.py
day20/: day20.py
day21/: day21.py
day22/: day22.py
day23/: day23.py
day24/: day24.py
day25/: day25.py
