[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = ""
authors = ["mrkirby153 <mr.austinwhyte@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.3.0"
pytz = "^2022.6"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
